[package]
name = "crossfs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ipc-channel = { workspace = true }
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
rand = "0.10.1"
serde = { workspace = true }
simconnect = { version = "0.4.0", optional = true }
thiserror = "2.0.18"

[features]
default = ["msfs"]
msfs = ["dep:simconnect"]
